Fix empty state button spacing
For empty states that have a conditional `actions` slot

--- a/app/assets/stylesheets/framework/blocks.scss
+++ b/app/assets/stylesheets/framework/blocks.scss
@@ -194,5 +194,5 @@
 }
 
 .gl-empty-state {
-  margin-top: $gl-spacing-scale-5;
+  margin-top: $gl-spacing-scale-7;
 }
